Add: onboarding and workspace apis
